# HarpTune

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rosso/harptune/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  AudioEngineBridge.kt  CMakeLists.txt  FastYin.cpp  FastYin.h  native-lib.cpp
app/src/main/java/com/rosso/harptune/: AudioEngineBridge.kt  AudioPlayer.kt  HarmonicaMapper.kt  HarmonicaUI.kt  MainActivity.kt  PitchDetector.kt
app/src/main/java/com/rosso/harptune/ml/: TelemetryManager.kt
app/src/main/java/com/rosso/harptune/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/rosso/harptune/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
